Improve CORS configuration for WebFlux - add HEAD method and exposed headers